# hebrew_seed

./: .gitignore  Cargo.toml  LICENSE.md  Makefile.toml  README.md  index.html  style.css
deploy/: index.html
src/: lib.rs  lib.rs.back  tohebrew.rs
