[package]
name = "ivrit-seed"
repository = "https://github.com/seed-rs/seed-quickstart"
version = "0.1.0"
authors = ["Francis Stephan <francis.stephan@free.fr>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib","rlib"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
lazy_static = "1.4.0"
seed = { git = "https://github.com/seed-rs/seed", rev = "0a538f0" }
[dependencies.web-sys]
version = "0.3"
features=[ "Element", 'Document', 'HtmlElement',]
